--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Angular Markdown Editor</title>
+  <title>MDown Editor - A markdown editor playground made in Anhular with html5, css3 and javascript.</title>
+  <!-- add icon link -->
+  <link rel = "icon" href=""
+  type = "png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdn.rawgit.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css'>
 <link rel='stylesheet' href='https://cdn.rawgit.com/isagalaev/highlight.js/master/src/styles/github.css'><link rel="stylesheet" href="./style.css">
