--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>MDown Editor - A markdown editor playground made in Anhular with html5, css3 and javascript.</title>
   <!-- add icon link -->
-  <link rel = "icon" href=""
+  <link rel = "icon" href="favicon.png"
   type = "png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdn.rawgit.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css'>
