--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="favicon.png"
+  type = "png">
   <title>MDown Editor - A markdown editor playground made in Anhular with html5, css3 and javascript.</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdn.rawgit.com/sindresorhus/github-markdown-css/gh-pages/github-markdown.css'>
